--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -1,7 +1,7 @@
 ---
 title: 
 
-tags: [Zemax][Optical design]
+tags: [Zemax]
 categories: [随便说说]
 date: 2024-10-10
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
@@ -10,6 +10,7 @@ references:
   - title: vitepress-theme-curve
     url: https://github.com/imsyy/vitepress-theme-curve
 ---
+
 # 光学系统设计第一章 绪论
 
 > **参考书目：**  
