--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -43,7 +43,8 @@ $$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
 
 ### 利用费马原理推导折射定律
 
-![alt text](image-2.png)
+![alt text](https://picui.cn/thumbnails/44659579ae8b146cb4747916f8430888.png)
+
 
 题目分析：已知$A$与$B$点，必须要求光线从$A$处出发，经过一次折射必须到达$A$点。
 
@@ -56,7 +57,7 @@ $$\therefore nsini=n'sini' $$
 
 ### 对于任意曲面（不含衍射面）导出折射定律的折射形式
 
-![alt text](image-3.png)
+![alt text](https://youke1.picui.cn/s1/2025/07/31/688b4f573b9ca.png)
 
 设折射面是任意曲面$f(x,y,z)=0$，如下图所示：
 设$\boldsymbol{A_{0}}$,$\boldsymbol{A_{0}'}$分别是沿入射光线$AP$、折射光线$PB$的单位矢量，$N$是光线与折射曲面交点处的法线矢量。
