--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -1,5 +1,5 @@
 ---
-title: 
+title: 光学系统设计第一章-高斯光学
 
 tags: [Zemax]
 categories: [光学设计基础]
@@ -11,7 +11,7 @@ references:
     url: https://github.com/imsyy/vitepress-theme-curve
 ---
 
-# 光学系统设计第一章 绪论
+# 光学系统设计第一章 高斯光学
 
 > **参考书目：**  
 > 《工程光学》（第4版）                 &ensp;      郁道银 谈恒英  
