--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -57,7 +57,7 @@ $$\therefore nsini=n'sini' $$
 
 ### 对于任意曲面（不含衍射面）导出折射定律的折射形式
 
-[![示意图](https://youke1.picui.cn/s1/2025/07/31/688b515ac648f.png)](https://youke1.picui.cn/s1/2025/07/31/688b515ac648f.png)
+[![示意图](https://free.picui.cn/free/2025/07/31/688b52f25c873.png)
 
 设折射面是任意曲面$f(x,y,z)=0$，如下图所示：
 设$\boldsymbol{A_{0}}$,$\boldsymbol{A_{0}'}$分别是沿入射光线$AP$、折射光线$PB$的单位矢量，$N$是光线与折射曲面交点处的法线矢量。
