--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -10,7 +10,8 @@ references:
     url: https://github.com/imsyy/vitepress-theme-curve
 ---
 
-# 光学系统设计第一章 高斯光学
+
+# 光学系统设计第一章 绪论
 
 > **参考书目：**  
 > 《工程光学》（第4版）                 &ensp;      郁道银 谈恒英  
@@ -42,8 +43,7 @@ $$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
 
 ### 利用费马原理推导折射定律
 
-![示意图](https://picui.cn/thumbnails/44659579ae8b146cb4747916f8430888.png)
-
+![alt text](image-2.png)
 
 题目分析：已知$A$与$B$点，必须要求光线从$A$处出发，经过一次折射必须到达$A$点。
 
@@ -52,11 +52,11 @@ $$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
 因为$A$、$B$两点位于不同的介质中，对光线运动进行分解，$y$方向上的距离是固定值，因此$S$只是关于$x$的函数，根据费马原理，光线沿极值传播，因此光程应该是极值，那么 $S$对$x$求导，导数值应该为0
  $$\frac{dS}{dx}=n \frac{x}{\sqrt{x^{2}+y_{1}^{2}}}-n'\frac{x}{\sqrt{(L-x)^{2}+y_{2}^{2}}}=0$$
  $$\because sin i = \frac{x}{\sqrt{x^{2}+y_{1}^{2}}},sin i'=\frac{x}{\sqrt{(L-x)^{2}+y_{2}^{2}}}$$
-$$\therefore nsini=n'sini' $$
+$$\therefore n\sin i=n'\sin i' $$
 
 ### 对于任意曲面（不含衍射面）导出折射定律的折射形式
 
-![示意图](https://picui.cn/thumbnails/7da8d4452302a431cf0a623dc8d47c0e.png)
+![alt text](image-3.png)
 
 设折射面是任意曲面$f(x,y,z)=0$，如下图所示：
 设$\boldsymbol{A_{0}}$,$\boldsymbol{A_{0}'}$分别是沿入射光线$AP$、折射光线$PB$的单位矢量，$N$是光线与折射曲面交点处的法线矢量。
@@ -105,3 +105,66 @@ $$S=n_{1}d_{1}+n_{2}d_{2}+\Delta S$$
 则有：
 $$\delta S=n_{1}\delta d_{1}+n_{2}\delta d_{2}+\delta \Delta S$$
 $$\delta \Delta S=\frac{\partial \Delta S}{\partial x}\delta x+\frac{\partial\Delta S}{\partial y}\delta y+\frac{\partial \Delta S}{\partial z}\delta z$$
+则可以得到：
+$$(n_{1}\cos \alpha_{1}-n_{2}\cos \alpha_{2}+\frac{\partial\Delta S}{\partial x})\delta x+(n_{1}\cos \beta_{1}-n_{2}\cos \beta_{2}+\frac{\partial\Delta S}{\partial y})\delta y+(n_{1}\cos \gamma_{1}-n_{2}\cos \gamma_{2}+\frac{\partial\Delta S}{\partial z})\delta z=0$$
+依旧将$\delta z$用$\delta x$与$\delta y$表示，带入上式则可得：
+
+$$
+\left\{
+\begin{array}{l}
+n_{1}\cos \alpha_{1} - n_{2}\cos \alpha_{2} + \dfrac{\partial\Delta S}{\partial x}\delta x = -pN \\
+\\
+n_{1}\cos \beta_{1} - n_{2}\cos \beta_{2} + \dfrac{\partial\Delta S}{\partial y}\delta y = -pN \\
+\\
+n_{1}\cos \gamma_{1} - n_{2}\cos \gamma_{2} + \dfrac{\partial\Delta S}{\partial z}\delta z = -pN
+\end{array}
+\right.
+$$
+最终得到折射定律的一般矢量形式，即广义斯涅尔定律
+$$n_{2}\boldsymbol{A_{0}'}=n_{1}\boldsymbol{A_{0}}+p\boldsymbol{N}+grad\space\space \space \Delta S$$
+$p$与面型相关。
+
+## 费马原理的拉格朗日表述
+
+>**哈密顿原理：**</br>在物理学里，哈密顿原理（英语：Hamilton's principle）是爱尔兰物理学家威廉·哈密顿于1833年发表的关于平稳作用量原理的表述。哈密顿原理阐明，一个物理系统的拉格朗日函数，所构成的泛函的变分问题解答，可以表达这物理系统的动力行为。拉格朗日函数又称为拉格朗日量，包含了这物理系统所有的物理内涵。这泛函称为作用量。哈密顿原理提供了一种新的方法来表述物理系统的运动。不同于牛顿运动定律的微分方程方法，这方法以积分方程来设定系统的作用量，在作用量平稳的要求下，使用变分法来计算整个系统的运动方程。</br> 虽然哈密顿原理本来是用来表述经典力学，这原理也可以应用于经典场，像电磁场或重力场，甚至可以延伸至量子场论等等。</br>
+哈密顿原理阐明，一个物理系统的拉格朗日函数$L$所构成的作用量泛函$\mathcal{S}$，其平稳值是这物理系统的真实演化。
+以数学方程表示，定义作用量为
+>$$\mathcal{S} \stackrel{\text{def}}{=} \int_{t_{1}}^{t_{2}} L(\mathbf{q},\dot{\mathbf{q}},t) \, dt;$$
+>其中，$L(\mathbf{q}, \dot{\mathbf{q}}, t)$是系统的拉格朗日函数，  
+广义坐标$\mathbf{q} = (q_{1}, q_{2}, \ldots, q_{N})$是时间$t$的函数，  
+$t_{1}$和$t_{2}$分别为初始时间和终结时间。</br>假若，作用量的一次变分$\delta\mathcal{S} = 0$，作用量$\mathcal{S}$为平稳值，则$\mathbf{q}(t)$正确地描述这系统的真实演化。
+
+>**拉格朗日方程：**</br>
+假设一个物理系统符合完整系统的要求，即所有广义坐标都互相独立，则拉格朗日方程成立：
+>$$\frac{d}{dt} \left( \frac{\partial \mathcal{L}}{\partial \dot{\mathbf{q}}} \right) - \frac{\partial \mathcal{L}}{\partial \mathbf{q}} = \mathbf{0}$$
+>其中，$\mathcal{L}(\mathbf{q},\dot{\mathbf{q}},t)$ 是拉格朗日量，  
+$\mathbf{q}=(q_{1},q_{2},\ldots,q_{N})$ 是广义坐标，是时间 $t$ 的函数，  
+$\dot{\mathbf{q}}=(\dot{q}_{1},\dot{q}_{2},\ldots,\dot{q}_{N})$ 是广义速度。($\dot x$表示$x$的一阶导数)
+
+### 拉格朗日表述的推导
+
+先对路径的微分做处理：
+$$\mathrm{d}s=\sqrt{(\mathrm{d}x)^{2}+(\mathrm{d}y)^{2}+(\mathrm{d}z)^{2}}=\mathrm{d}z\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
+则费马原理原表达形式：
+$$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
+可改写为：
+$$\delta \int_{P}^{Q}n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}\space\mathrm{d}z=0$$
+对比哈密顿原理，可定义出光学拉格朗日量：
+$$L(x,y,\frac{\mathrm{d}x}{\mathrm{d}z},\frac{\mathrm{d}y}{\mathrm{d}z},z)=n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
+仿照经典力学可以得到光学上的拉格朗日方程式：
+$$\frac{\mathrm{d}}{\mathrm{d}z}(\frac{\partial L}{\partial \dot{x}})=\frac{\partial L}{\partial x}$$
+$$\frac{\mathrm{d}}{\mathrm{d}z}(\frac{\partial L}{\partial \dot{y}})=\frac{\partial L}{\partial y}$$
+选择$z$轴作为光轴的正方向，将拉格朗日量代入可得：
+$$\frac{\mathrm{d}}{\mathrm{d}z}\bigg[\frac{n\dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\bigg]=\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}\space\frac{\partial n}{\partial x}$$
+即：
+$$\frac{1}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\frac{\mathrm{d}}{\mathrm{d}z}\bigg[\frac{n\dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\bigg]=\frac{\partial n}{\partial x}$$
+将$\mathrm{d}s$表达式代入可得：
+$$\frac{\mathrm{d}}{\mathrm{d}s}(n\frac{\mathrm{d}x}{\mathrm{d}s})=\frac{\partial n}{\partial s}$$
+$$\frac{\mathrm{d}}{\mathrm{d}s}(n\frac{\mathrm{d}x}{\mathrm{d}s})=\frac{\partial n}{\partial s}$$
+$$\frac{\mathrm{d}}{\mathrm{d}s}(n\frac{\mathrm{d}x}{\mathrm{d}s})=\frac{\partial n}{\partial s}$$
+融合上述三式可得：
+$$\frac{\mathrm{d}}{\mathrm{d}s}\bigg(n\frac{\mathrm{d}\boldsymbol{r}}{\mathrm{d}s}\bigg)=\nabla n$$
+$\boldsymbol{r}$是光线上任意点的矢量位置
+若为近轴光线，则$\mathrm{d}s\approx\mathrm{d}z$，可得近轴光线方程
+$$\frac{\mathrm{d}}{\mathrm{d}z}\bigg(n\frac{\mathrm{d}\boldsymbol{r}}{\mathrm{d}z}\bigg)=\nabla n$$
+
