--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -56,7 +56,7 @@ $$\therefore n\sin i=n'\sin i' $$
 
 ### 对于任意曲面（不含衍射面）导出折射定律的折射形式
 
-![alt text](image-3.png)
+![示意图](https://picui.cn/thumbnails/7da8d4452302a431cf0a623dc8d47c0e.png)
 
 设折射面是任意曲面$f(x,y,z)=0$，如下图所示：
 设$\boldsymbol{A_{0}}$,$\boldsymbol{A_{0}'}$分别是沿入射光线$AP$、折射光线$PB$的单位矢量，$N$是光线与折射曲面交点处的法线矢量。
