--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -43,7 +43,7 @@ $$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
 
 ### 利用费马原理推导折射定律
 
-![alt text](image-2.png)
+![示意图](https://picui.cn/thumbnails/44659579ae8b146cb4747916f8430888.png)
 
 题目分析：已知$A$与$B$点，必须要求光线从$A$处出发，经过一次折射必须到达$A$点。
 
