--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -126,21 +126,24 @@ $p$与面型相关。
 
 ## 费马原理的拉格朗日表述
 
->**哈密顿原理：**</br>在物理学里，哈密顿原理（英语：Hamilton's principle）是爱尔兰物理学家威廉·哈密顿于1833年发表的关于平稳作用量原理的表述。哈密顿原理阐明，一个物理系统的拉格朗日函数，所构成的泛函的变分问题解答，可以表达这物理系统的动力行为。拉格朗日函数又称为拉格朗日量，包含了这物理系统所有的物理内涵。这泛函称为作用量。哈密顿原理提供了一种新的方法来表述物理系统的运动。不同于牛顿运动定律的微分方程方法，这方法以积分方程来设定系统的作用量，在作用量平稳的要求下，使用变分法来计算整个系统的运动方程。</br> 虽然哈密顿原理本来是用来表述经典力学，这原理也可以应用于经典场，像电磁场或重力场，甚至可以延伸至量子场论等等。</br>
+::: danger
+**哈密顿原理：**</br>在物理学里，哈密顿原理（英语：Hamilton's principle）是爱尔兰物理学家威廉·哈密顿于1833年发表的关于平稳作用量原理的表述。哈密顿原理阐明，一个物理系统的拉格朗日函数，所构成的泛函的变分问题解答，可以表达这物理系统的动力行为。拉格朗日函数又称为拉格朗日量，包含了这物理系统所有的物理内涵。这泛函称为作用量。哈密顿原理提供了一种新的方法来表述物理系统的运动。不同于牛顿运动定律的微分方程方法，这方法以积分方程来设定系统的作用量，在作用量平稳的要求下，使用变分法来计算整个系统的运动方程。</br> 虽然哈密顿原理本来是用来表述经典力学，这原理也可以应用于经典场，像电磁场或重力场，甚至可以延伸至量子场论等等。</br>
 哈密顿原理阐明，一个物理系统的拉格朗日函数$L$所构成的作用量泛函$\mathcal{S}$，其平稳值是这物理系统的真实演化。
 以数学方程表示，定义作用量为
->$$\mathcal{S} \stackrel{\text{def}}{=} \int_{t_{1}}^{t_{2}} L(\mathbf{q},\dot{\mathbf{q}},t) \, dt;$$
->其中，$L(\mathbf{q}, \dot{\mathbf{q}}, t)$是系统的拉格朗日函数，  
+$$\mathcal{S} \stackrel{\text{def}}{=} \int_{t_{1}}^{t_{2}} L(\mathbf{q},\dot{\mathbf{q}},t) \, dt;$$
+其中，$L(\mathbf{q}, \dot{\mathbf{q}}, t)$是系统的拉格朗日函数，  
 广义坐标$\mathbf{q} = (q_{1}, q_{2}, \ldots, q_{N})$是时间$t$的函数，  
 $t_{1}$和$t_{2}$分别为初始时间和终结时间。</br>假若，作用量的一次变分$\delta\mathcal{S} = 0$，作用量$\mathcal{S}$为平稳值，则$\mathbf{q}(t)$正确地描述这系统的真实演化。
+:::
 
->**拉格朗日方程：**</br>
+::: danger
+**拉格朗日方程：**</br>
 假设一个物理系统符合完整系统的要求，即所有广义坐标都互相独立，则拉格朗日方程成立：
->$$\frac{d}{dt} \left( \frac{\partial \mathcal{L}}{\partial \dot{\mathbf{q}}} \right) - \frac{\partial \mathcal{L}}{\partial \mathbf{q}} = \mathbf{0}$$
->其中，$\mathcal{L}(\mathbf{q},\dot{\mathbf{q}},t)$ 是拉格朗日量，  
+$$\frac{d}{dt} \left( \frac{\partial \mathcal{L}}{\partial \dot{\mathbf{q}}} \right) - \frac{\partial \mathcal{L}}{\partial \mathbf{q}} = \mathbf{0}$$
+其中，$\mathcal{L}(\mathbf{q},\dot{\mathbf{q}},t)$ 是拉格朗日量，  
 $\mathbf{q}=(q_{1},q_{2},\ldots,q_{N})$ 是广义坐标，是时间 $t$ 的函数，  
 $\dot{\mathbf{q}}=(\dot{q}_{1},\dot{q}_{2},\ldots,\dot{q}_{N})$ 是广义速度。($\dot x$表示$x$的一阶导数)
-
+:::
 ### 拉格朗日表述的推导
 
 先对路径的微分做处理：
@@ -165,6 +168,7 @@ $$\frac{\mathrm{d}}{\mathrm{d}s}(n\frac{\mathrm{d}x}{\mathrm{d}s})=\frac{\partia
 融合上述三式可得：
 $$\frac{\mathrm{d}}{\mathrm{d}s}\bigg(n\frac{\mathrm{d}\boldsymbol{r}}{\mathrm{d}s}\bigg)=\nabla n$$
 $\boldsymbol{r}$是光线上任意点的矢量位置
+::: tip
 若为近轴光线，则$\mathrm{d}s\approx\mathrm{d}z$，可得近轴光线方程
 $$\frac{\mathrm{d}}{\mathrm{d}z}\bigg(n\frac{\mathrm{d}\boldsymbol{r}}{\mathrm{d}z}\bigg)=\nabla n$$
-
+:::
