--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -6,8 +6,9 @@ date: 2025-7-31
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
 articleGPT: 这是光学系统设计第一章笔记，主要介绍费马原理、拉格朗日表述、哈密顿表述与高斯光学，是光学系统设计的理论基础
 references:
-  - title: vitepress-theme-curve
-    url: https://github.com/imsyy/vitepress-theme-curve
+  - title: 浙江大学光学系统设计 李晓彤老师 2025春夏学期
+  - url: https://classroom.zju.edu.cn/livingroom?course_id=72005&sub_id=1539825&tenant_code=112
+   
 ---
 
 
