--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -173,3 +173,54 @@ $\boldsymbol{r}$是光线上任意点的矢量位置
 若为近轴光线，则$\mathrm{d}s\approx\mathrm{d}z$，可得近轴光线方程
 $$\frac{\mathrm{d}}{\mathrm{d}z}\bigg(n\frac{\mathrm{d}\boldsymbol{r}}{\mathrm{d}z}\bigg)=\nabla n$$
 :::
+### 光线方程几个例题
+
+::: info
+**利用光线方程式证明：均匀介质中的光线是直线。**  
+::: 
+利用光线方程：
+$$\frac{d}{ds}(n\frac{dr}{ds})=\nabla n $$  
+$$\because n=const $$  
+$$\therefore \nabla n=0$$
+$$\therefore n\frac{d^{2}r}{ds^{2}}=0$$
+其解为$r=as+b$  
+
+::: info
+**求自聚焦光纤中近轴光线的一般路径。**  </br>一种自聚焦光纤中的折射率方程：  
+$$ n^{2}(x,y,z)=n_{0}^{2}[1-\alpha^{2}(x^{2}+y^{2})] $$  
+$n_{0}$，$\alpha$为常数
+::: 
+
+由近轴光线方程式：
+$$\frac{\mathrm{d}}{\mathrm{d}z}(n\frac{\mathrm{d}r}{\mathrm{d}z})=\nabla n $$  
+考虑$n$与$z$无关，方程式的$x$分量为：
+$$\frac{\mathrm{d}}{\mathrm{d}z}(n\frac{\mathrm{d}x}{\mathrm{d}z})=n\frac{\mathrm{d}^{2}x}{\mathrm{d}z^{2}}=\frac{\partial n}{\partial x} $$  
+于是，
+$$\frac{\mathrm{d}^{2}x}{\mathrm{d}z^{2}}=\frac{1}{n}\frac{\partial n}{\partial x}=\frac{1}{2n^{2}}(-2\alpha^{2}n_{0}^{2}x)\approx-\alpha^{2}x $$  
+$$\therefore x(z)=A\cos(\alpha z)+B\sin(\alpha z)$$  
+**$A$, $B$, $C$, $D$是决定于光线初始条件的常数**  
+
+同理，
+$$y(z)=C\cos(\alpha z)+D\sin(\alpha z)$$
+考虑介质的旋转对称性，总可以将入射点选在x轴上，有$y(z=0)=0$  
+$$\therefore C=0$$  
+
+考虑入射点 $(x_0,0,0)$ 与z轴夹角为 $\gamma_0$ 的光线有：  
+$$x_{z=0}=A=x_0$$  
+$$\frac{}{}$$
+$$\left. \dfrac{\mathrm{d}x}{\mathrm{d}z} \right|_{z=0} = -A\alpha \cdot 0 + B\alpha = B\alpha = \dfrac{\cos\alpha_x}{\cos\gamma_0}$$  
+$$\therefore B = \dfrac{\cos\alpha_x}{\alpha \cos\gamma_0}$$  
+同理，
+$$D = \dfrac{\cos\beta_y}{\alpha \cos\gamma_0} $$  
+
+## 3.费马原理的第三种表述-哈密顿表述
+
+::: tip
+哈密顿表述便于求理想光路，也便于计算各种像差。
+::: 
+### 光学广义动量（光学方向余弦）
+
+光学拉格朗日量
+$$L(x,y,\frac{\mathrm{d}x}{\mathrm{d}z},\frac{\mathrm{d}y}{\mathrm{d}z},z)=n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
+由于求导阶数较多，故改写为$\dot{x}$形式
+$$L(x,y,\dot{x},\dot{y},z)=n(x,y,z)\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}$$
