--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -125,7 +125,7 @@ $$
 $$n_{2}\boldsymbol{A_{0}'}=n_{1}\boldsymbol{A_{0}}+p\boldsymbol{N}+grad\space\space \space \Delta S$$
 $p$与面型相关。
 
-## 费马原理的拉格朗日表述
+## 2.费马原理的拉格朗日表述
 
 ::: danger
 **哈密顿原理：**</br>在物理学里，哈密顿原理（英语：Hamilton's principle）是爱尔兰物理学家威廉·哈密顿于1833年发表的关于平稳作用量原理的表述。哈密顿原理阐明，一个物理系统的拉格朗日函数，所构成的泛函的变分问题解答，可以表达这物理系统的动力行为。拉格朗日函数又称为拉格朗日量，包含了这物理系统所有的物理内涵。这泛函称为作用量。哈密顿原理提供了一种新的方法来表述物理系统的运动。不同于牛顿运动定律的微分方程方法，这方法以积分方程来设定系统的作用量，在作用量平稳的要求下，使用变分法来计算整个系统的运动方程。</br> 虽然哈密顿原理本来是用来表述经典力学，这原理也可以应用于经典场，像电磁场或重力场，甚至可以延伸至量子场论等等。</br>
