--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -224,3 +224,48 @@ $$D = \dfrac{\cos\beta_y}{\alpha \cos\gamma_0} $$
 $$L(x,y,\frac{\mathrm{d}x}{\mathrm{d}z},\frac{\mathrm{d}y}{\mathrm{d}z},z)=n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
 由于求导阶数较多，故改写为$\dot{x}$形式
 $$L(x,y,\dot{x},\dot{y},z)=n(x,y,z)\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}$$
+记：
+$$p=\frac{\partial L}{\partial \dot{x}}=\frac{n(x,y,z)\cdot 2\dot{x}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n\frac{\mathrm{d}x}{\mathrm{d}z}}{\frac{\mathrm{d}s}{\mathrm{d}z}}=n\space \frac{\mathrm{d}x}{\mathrm{d}s}$$
+$$q=\frac{\partial L}{\partial \dot{y}}=\frac{n(x,y,z)\cdot 2\dot{y}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n\frac{\mathrm{d}y}{\mathrm{d}z}}{\frac{\mathrm{d}s}{\mathrm{d}z}}=n\space \frac{\mathrm{d}y}{\mathrm{d}s}$$
+**$p$、$q$分别为折射率乘以各个方向余弦，称为光学方向余弦**
+
+### 光学哈密顿量
+
+::: warning
+ $$\frac{\mathrm d}{\mathrm{d}z}\bigg(\frac{\partial L}{\partial \dot{x}}\bigg)=\frac{\partial L}{\partial x}$$
+ 该公式的推导：</br>
+ 作用量积分：$S=\int_{z_{1}}^{z_{2}} L(x,y,\dot{x},\dot{y},z)dz$</br>
+变分原理：$\delta S=0$</br>
+变分运算：
+$$\delta S=\int\left[\frac{\partial L}{\partial x} \delta x+\frac{\partial L}{\partial \dot{x}} \delta \dot{x}+\text{(y分量)}\right] dz=0$$
+分部积分：
+$$\int \frac{\partial L}{\partial \dot{x}} \frac{d}{d z}(\delta x) d z=\left[\frac{\partial L}{\partial \dot{x}} \delta x\right]_{z_{1}}^{z_{2}}-\int \frac{d}{d z}\left(\frac{\partial L}{\partial \dot{x}}\right) \delta x d z$$
+固定端点：$\delta x|_{z_{1}}=\delta x|_{z_{2}}=0$</br>
+最终得到：
+$$\int\left[\frac{\partial L}{\partial x}-\frac{d}{dz}\left(\frac{\partial L}{\partial \dot{x}}\right)\right] \delta x d z=0$$
+:::
+**光学哈密顿量的定义式**
+$$H=p\dot{x}+q \dot{y}-L(x,y,\dot{x},\dot{y},z)$$
+对上式两边取全微分可得：
+$$
+\begin{aligned}
+dH & = pd\dot{x} + \dot{x}dp + qd\dot{y} + \dot{y}dq - \left( \frac{\partial L}{\partial x}dx + \frac{\partial L}{\partial y}dy + \frac{\partial L}{\partial\dot{x}}d\dot{x} + \frac{\partial L}{\partial\dot{y}}d\dot{y} + \frac{\partial L}{\partial z}dz \right) \\
+   & = \left( p - \frac{\partial L}{\partial\dot{x}} \right)d\dot{x} + \left( q - \frac{\partial L}{\partial\dot{y}} \right)d\dot{y} + \dot{x}dp + \dot{y}dq - \frac{\partial L}{\partial x}dx - \frac{\partial L}{\partial y}dy - \frac{\partial L}{\partial z}dz \\
+   & = \dot{x}dp + \dot{y}dq - \dot{p}dx - \dot{q}dy - \frac{\partial L}{\partial z}dz
+\end{aligned}
+$$
+根据全微分形式不变性，可见 $H$ 是 $x,y,z,p,q$ 的函数，且有：
+
+$$
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial H}{\partial p} &= \dot{x} \\
+\frac{\partial H}{\partial q} &= \dot{y} \\
+\frac{\partial H}{\partial x} &= -\dot{p} \\
+\frac{\partial H}{\partial y} &= -\dot{q} \\
+\frac{\partial H}{\partial z} &= -\frac{\partial L}{\partial z}
+\end{aligned}
+\end{array}
+\right.
+$$
