--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -269,3 +269,168 @@ $$
 \end{array}
 \right.
 $$
+根据光学哈密顿量的定义，
+$$H=p\dot{x}+q\dot{y}-L(x,y,\dot{x},\dot{y},z)$$
+将利用全微分形式不变性得到的结果代入,并结合光学广义动量、光学拉格朗日量计算式：
+$$p=\frac{\partial L}{\partial \dot{x}}=\frac{n(x,y,z)\cdot 2\dot{x}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n(x,y,z)\cdot \dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+$$q=\frac{\partial L}{\partial \dot{y}}=\frac{n(x,y,z)\cdot 2\dot{y}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n(x,y,z)\cdot \dot{y}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+$$L(x,y,\dot{x},\dot{y},z)=n(x,y,z)\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}$$
+即可得到：
+$$H=\frac{n\cdot \dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\cdot \dot{x}+\frac{n\cdot \dot{y}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\cdot \dot{y}-n\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}=-\frac{n}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+又因为，
+$$ \sqrt{n^{2} - p^{2} - q^{2}} = \left[ n^{2} - \frac{n^{2} \dot{x}^{2}}{1 + \dot{x}^{2} + \dot{y}^{2}} - \frac{n^{2} \dot{y}^{2}}{1 + \dot{x}^{2} + \dot{y}^{2}} \right]^{\frac{1}{2}} = \frac{n}{\sqrt{1 + \dot{x}^{2} + \dot{y}^{2}}} $$
+故而，
+$$H=-\sqrt{n^{2} - p^{2} - q^{2}}$$
+
+>$$\sqrt{n^{2} - p^{2} - q^{2}}=\sqrt{n^{2}-n^{2}\bigg((\frac{\mathrm{d}x}{\mathrm{d}s})^{2}+(\frac{\mathrm{d}y}{\mathrm{d}s})^{2}\bigg)}=n\cos \gamma$$
+
+## 4.高斯光学
+
+### 高斯光学中的哈密顿量
+
+::: info
+**本节主要利用哈密顿方程式研究旋转对称光学系统中的高斯光学**</br>
+**高斯光学是什么？** </br>
+哈密顿方程式最低阶的近似解，也叫**近轴光学**，本节研究的就是**近似的条件**以及**为什么要近似**</br>
+**旋转对称光学系统是什么？** </br>
+即共轴光学系统
+::: 
+
+ 考虑到研究对象是旋转对称光学系统（z是光轴），因此不失一般性地有：
+ $$n\sim x^{2}+y^{2}$$
+ 结合哈密顿量可得：
+ $$H=-\sqrt{n^{2}-p^{2}-q^{2}}=-\sqrt{n^{2}(u,z)-v^{2}}$$
+ 其中，
+ $$
+\left\{
+\begin{array}{l}
+\begin{aligned}
+u=x^{2}+y^{2} \\
+v=p^{2}+q^{2}
+\end{aligned}
+\end{array}
+\right.
+$$
+由于研究的是近轴光学，那么则有
+$$x\approx 0,y\approx0,p=n\frac{\mathrm{d}x}{\mathrm{d}s}=n\cos \alpha \approx 0,q=n\frac{\mathrm{d}y}{\mathrm{d}s}=n\cos \beta \approx 0$$
+则有
+$$u\approx 0,v\approx 0$$
+故而哈密顿量
+$$H(u,v,z)\approx H(0,0,z)$$
+故可将$H(u,v,z)$在$u=0,v=0$处进行泰勒展开。
+
+::: warning
+**一元函数**在点 $x_{k}$ 处的泰勒展开式为：
+$$ f(x)=f\left(x_{k}\right)+\left(x-x_{k}\right) f^{\prime}\left(x_{k}\right)+\frac{1}{2!}\left(x-x_{k}\right)^{2} f^{\prime\prime}\left(x_{k}\right)+o^{n} $$
+**二元函数**在点 $(x_{k},y_{k})$ 处的泰勒展开式为：
+$$
+\begin{aligned}
+f(x,y) &= f\left(x_{k},y_{k}\right)+\left(x-x_{k}\right)f_{x}^{\prime}\left(x_{k},y_{k}\right)+\left(y-y_{k}\right)f_{y}^{\prime}\left(x_{k},y_{k}\right) \\
+& \quad + \frac{1}{2!}\left[\left(x-x_{k}\right)^{2} f_{xx}^{\prime\prime}\left(x_{k},y_{k}\right) + 2\left(x-x_{k}\right)\left(y-y_{k}\right)f_{xy}^{\prime\prime}\left(x_{k},y_{k}\right)\right. \\
+& \quad \left. + \left(y-y_{k}\right)^{2} f_{yy}^{\prime\prime}\left(x_{k},y_{k}\right)\right] + o^{n}
+\end{aligned}$$
+**多元函数**（$n$元）在点 $x_{k}$ 处的泰勒展开式为：
+$$
+\begin{aligned}
+f(x^{1},x^{2},\ldots,x^{n}) &= f\left(x_{k}^{1},x_{k}^{2},\ldots,x_{k}^{n}\right) \\
+& \quad + \sum_{i=1}^{n}\left(x^{i}-x_{k}^{i}\right)\frac{\partial f}{\partial x^{i}}\left(x_{k}^{1},x_{k}^{2},\ldots,x_{k}^{n}\right) \\
+& \quad + \frac{1}{2!}\sum_{i=1}^{n}\sum_{j=1}^{n}\left(x^{i}-x_{k}^{i}\right)\left(x^{j}-x_{k}^{j}\right)\frac{\partial^{2}f}{\partial x^{i}\partial x^{j}}\left(x_{k}^{1},x_{k}^{2},\ldots,x_{k}^{n}\right) \\
+& \quad + o^{n}
+\end{aligned}
+$$
+::: 
+$$
+\begin{aligned}
+H(u,v,z)&=H_{0}(z)+\frac{\partial H}{\partial u}\bigg|_{u=v=0}u+\frac{\partial H}{\partial v}\bigg|_{u=v=0}v+\dots\\
+\space\\
+&=H_{0}(z)+H_{1}(z)+H_{2}(z)+\dots
+\end{aligned}
+$$
+由于旋转对称性，可以先研究关于$x$与$p$的方程，同理可得$y$与$q$的方程。
+$$
+\because
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial u}{\partial x}=2x\\
+\frac{\partial v}{\partial p}=2p
+\end{aligned}
+\end{array}
+\right.
+$$
+
+$$
+\therefore
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial }{\partial x}=2x\frac{\partial}{\partial u}\\
+\space \\
+\frac{\partial }{\partial p}=2p\frac{\partial}{\partial p}
+\end{aligned}
+\end{array}
+\right.
+$$
+由前一节的哈密顿方程得到的结论：
+$$
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial H}{\partial p} &= \dot{x} \\
+\frac{\partial H}{\partial q} &= \dot{y} \\
+\frac{\partial H}{\partial x} &= -\dot{p} \\
+\frac{\partial H}{\partial y} &= -\dot{q} \\
+\frac{\partial H}{\partial z} &= -\frac{\partial L}{\partial z}
+\end{aligned}
+\end{array}
+\right.
+$$
+则可得到：
+$$\dot{x}=\frac{\partial H}{\partial p}=2p\frac{\partial H}{\partial v}=2pH_{2}$$
+$$\dot{p}=-\frac{\partial H}{\partial x}=-2x\frac{\partial H}{\partial u}=-2xH_{1}$$
+$$\because H=-\sqrt{n^{2}(u,z)-v}$$
+$$
+\begin{array}{l}
+\begin{aligned}
+\therefore &H_{1}(z)=\frac{\partial H}{\partial u}\bigg|_{u=v=0}=-\frac{\partial n}{\partial u}\bigg|_{u=v=0}\\
+\space \\
+&H_{2}(z)=\dfrac{\partial H}{\partial v}\bigg|_{u=v=0} = \dfrac{1}{2\sqrt{n^{2}(u,z) - v}}\bigg|_{u=v=0}=\frac{1}{2n(0,z)}
+ \end{aligned}
+\end{array}$$
+
+### 利用哈密顿量对近轴光线进行光路追迹
+
+>**单个折射球面**
+
+![示意图]([Figure_1.png](https://picui.cn/thumbnails/8189c3820dd8300b1b0a7306cf55ec56.png))
+
+::: tip
+**球面方程也有近似** </br>
+先给出球面方程，球心位于$C$点，半径为$R$:
+$$x^{2}+y^{2}+(z-R)^{2}=R^{2}$$
+即：</br>
+$$x^{2}+y^{2}=z(2R-Z)$$
+整理可得：
+$$z=R\bigg[1\pm\Big(1-\frac{u}{R^{2}}\Big)^{\frac{1}{2}}\bigg]$$
+考虑到当$x=y=0$时，$z=0$，故有：
+$$z=R\bigg[1-\Big(1-\frac{u}{R^{2}}\Big)^{\frac{1}{2}}\bigg]$$
+在$u=0$处对球面进行级数展开可得：
+$$z\approx \frac{u}{2R}+\frac{u^{2}}{8R}+\dots=f(u)$$
+::: 
+先研究问题中的折射率分布，可由下式表示：
+$$n(x,y,z)=n_{1}\Theta\bigg(f(u)-z\bigg)+n_{2}\Theta\bigg(z-f(u)\bigg)$$
+其中，$\Theta(m)$表达式如下：
+$$
+\Theta(m)=
+\left\{
+\begin{array}{l}
+\begin{aligned}
+&1,\space m>0
+\space \\
+&0,\space m<0
+\end{aligned}
+\end{array}
+\right.
+$$
+由推导出的$H_{1}$、$H_{2}$计算公式可得：
+$$H_{1}=-\frac{\partial n}{\partial u}\bigg|_{u=v=0}=\bigg[-n_{1}\frac{\mathrm{d}\Theta}{\mathrm{d}[f(u)-z]} \cdot \frac{\mathrm{d}f(u)}{\mathrm{d}u}+n_{2}\frac{\mathrm{d}\Theta}{d[z-f(u)]}\cdot \frac{\mathrm{d}f(u)}{\mathrm{d}u}\bigg]\bigg|_{u=0} $$
