--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -402,7 +402,7 @@ $$
 
 >**单个折射球面**
 
-![示意图]([Figure_1.png](https://picui.cn/thumbnails/8189c3820dd8300b1b0a7306cf55ec56.png))
+![示意图](https://picui.cn/thumbnails/8189c3820dd8300b1b0a7306cf55ec56.png))
 
 ::: tip
 **球面方程也有近似** </br>
