--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -289,10 +289,14 @@ $$H=-\sqrt{n^{2} - p^{2} - q^{2}}$$
 ### 高斯光学中的哈密顿量
 
 ::: info
-**本节主要利用哈密顿方程式研究旋转对称光学系统中的高斯光学**</br>
-**高斯光学是什么？** </br>
-哈密顿方程式最低阶的近似解，也叫**近轴光学**，本节研究的就是**近似的条件**以及**为什么要近似**</br>
-**旋转对称光学系统是什么？** </br>
+**本节主要利用哈密顿方程式研究旋转对称光学系统中的高斯光学**
+
+**高斯光学是什么？** 
+
+哈密顿方程式最低阶的近似解，也叫**近轴光学**，本节研究的就是**近似的条件**以及**为什么要近似**
+
+**旋转对称光学系统是什么？** 
+
 即共轴光学系统
 ::: 
 
