--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -1,5 +1,5 @@
 ---
-title: 光学系统设计第一章-高斯光学
+title: 光学系统设计第一章-费马原理三种表述与高斯光学
 tags: [Zemax]
 categories: [光学设计基础]
 date: 2025-7-31
@@ -12,7 +12,7 @@ references:
 ---
 
 
-# 光学系统设计第一章 高斯光学
+# 光学系统设计第一章 费马原理三种表述与高斯光学
 
 > **参考书目：**  
 > 《工程光学》（第4版）                 &ensp;      郁道银 谈恒英  
@@ -438,3 +438,99 @@ $$
 $$
 由推导出的$H_{1}$、$H_{2}$计算公式可得：
 $$H_{1}=-\frac{\partial n}{\partial u}\bigg|_{u=v=0}=\bigg[-n_{1}\frac{\mathrm{d}\Theta}{\mathrm{d}[f(u)-z]} \cdot \frac{\mathrm{d}f(u)}{\mathrm{d}u}+n_{2}\frac{\mathrm{d}\Theta}{d[z-f(u)]}\cdot \frac{\mathrm{d}f(u)}{\mathrm{d}u}\bigg]\bigg|_{u=0} $$
+$$\because z\approx \frac{u}{2R}+\frac{u^{2}}{8R}+\dots=f(u)$$
+（这里只保留一次项）
+$$\therefore \frac{\mathrm{d}\Theta(m)}{\mathrm{d}m}=\delta(m),\frac{\mathrm{d}f(u)}{\mathrm{d}u}=\frac{1}{2R}$$
+
+$$\therefore H_{1}=\frac{n_{2}-n_{1}}{2R}\delta(z)$$
+$$\therefore \dot{p}=-2xH_{1}=-\frac{n_{2}-n_{1}}{R}\delta(z)x$$
+由上式可见，$\dot{p}=\frac{\partial L}{\partial \dot{x}}=0$，**说明光线斜率无变化，即同种介质中光线是直线。**
+在$z=0$处积分，则有：
+$$\int_{-\epsilon}^{\epsilon}\dot{p}dz=\int_{-\epsilon}^{\epsilon}-\frac{n_{2}-n_{1}}{R}\delta(z)xdz$$
+可得：
+$$p_{2}-p_{1}=-\frac{n_{2}-n_{1}}{R}x_{0}$$
+在介质中，近轴条件下有：
+$$p_{1}=n_{1}\frac{\mathrm{d}x}{\mathrm{d}z},p_{2}=n_{2}\frac{\mathrm{d}x}{\mathrm{d}z}$$
+观察图像可得：
+$$p_{1}=n_{1}\frac{x_{0}}{z_{0}-z_{1}}=-n_{1}\frac{x_{0}}{z_{1}}$$
+$$p_{2}=n_{2}\frac{-x_{0}}{z_{2}-z_{1}}=-n_{2}\frac{x_{0}}{z_{2}}$$
+$$\therefore \frac{n_{2}}{z_{2}}-\frac{n_{1}}{z_{1}}=\frac{n_{2}-n_{1}}{R}$$
+第一焦距，物方焦距：
+$$z_{2}\rightarrow \infty,z_{1}=-\frac{nR}{n_{2}-n_{1}}$$
+第二焦距，像方焦距：
+$$z_{1}\rightarrow \infty,z_{2}=\frac{n_{2}R}{n_{2}-n_{1}}$$
+> **对应应用光学中的公式：**
+>
+> $$\frac{n_{2}}{f'}-\frac{n_{1}}{f}=\frac{n_{2}-n_{1}}{R}$$
+
+> **薄透镜**
+>
+> 两折射面之间的距离可以忽略的透镜，第一面上的光线高度等于第二面上的光线高度
+
+![示意图](https://picui.cn/thumbnails/aa206c7b99b1616d77f3eb75927446c7.png)
+
+和单个折射球面相比，只是引入了透镜介质，相当于多了一个中间量
+$$p_{1}-p_{0}=-\frac{n_{1}-n_{0}}{R_{1}}x_{0}$$
+$$p_{2}-p_{1}=-\frac{n_{2}-n_{1}}{R_{2}}x_{0}$$
+$$\therefore p_{2}-p_{0}=\bigg(\frac{n_{1}-n_{2}}{R_{2}}-\frac{n_{1}-n_{0}}{R_{1}}\bigg)x_{0}$$
+$$\because p_{0}=-n_{0}\frac{x_{0}}{z_{0}},p_{2}=-n_{2}\frac{x_{0}}{z_{2}}$$
+$$\therefore \frac{n_{0}}{z_{0}}-\frac{n_{2}}{z_{2}}=\frac{n_{1}-n_{2}}{R_{2}}-\frac{n_{1}-n_{0}}{R_{1}}$$
+
+## 5.本章小节
+>**1.费马原理的第一种表述-极端光程定律** </br>
+>连接给定点$P$和$Q$有许多路径，而光线只沿着光程为极值的路径进行传播，即：
+>$$\delta \int_{P}^{Q}n(x,y,z)ds=0$$
+>极值也有三种情况，极大值、极小值、稳定值。
+
+>**2.费马原理的第二种表述-拉格朗日表述**
+>$$\delta \int_{P}^{Q}n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}\space\mathrm{d}z=0$$
+>对比哈密顿原理，可定义出光学拉格朗日量：
+>$$L(x,y,\frac{\mathrm{d}x}{\mathrm{d}z},\frac{\mathrm{d}y}{\mathrm{d}z},z)=n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
+
+>**3.费马原理的第三种表述-哈密顿表述**
+>
+>**光学拉格朗日量**
+>$$L(x,y,\frac{\mathrm{d}x}{\mathrm{d}z},\frac{\mathrm{d}y}{\mathrm{d}z},z)=n(x,y,z)\sqrt{1+(\frac{\mathrm{d}x}{\mathrm{d}z})^{2}+\frac{\mathrm{d}y}{\mathrm{d}z})^{2}}$$
+>由于求导阶数较多，故改写为$\dot{x}$形式
+>$$L(x,y,\dot{x},\dot{y},z)=n(x,y,z)\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}$$
+>记：
+>$$p=\frac{\partial L}{\partial \dot{x}}=\frac{n(x,y,z)\cdot 2\dot{x}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n\frac{\mathrm{d}x}{\mathrm{d}z}}{\frac{\mathrm{d}s}{\mathrm{d}z}}=n\space \frac{\mathrm{d}x}{\mathrm{d}s}$$
+>$$q=\frac{\partial L}{\partial \dot{y}}=\frac{n(x,y,z)\cdot 2\dot{y}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n\frac{\mathrm{d}y}{\mathrm{d}z}}{\frac{\mathrm{d}s}{\mathrm{d}z}}=n\space \frac{\mathrm{d}y}{\mathrm{d}s}$$
+>**$p$、$q$分别为折射率乘以各个方向余弦，称为光学方向余弦**
+>$$H=p\dot{x}+q \dot{y}-L(x,y,\dot{x},\dot{y},z)$$
+>对上式两边取全微分可得：
+>$$
+>\begin{aligned}
+dH & = pd\dot{x} + \dot{x}dp + qd\dot{y} + \dot{y}dq - \left( \frac{\partial L}{\partial x}dx + \frac{\partial L}{\partial y}dy + \frac{\partial L}{\partial\dot{x}}d\dot{x} + \frac{\partial L}{\partial\dot{y}}d\dot{y} + \frac{\partial L}{\partial z}dz \right) \\
+   & = \left( p - \frac{\partial L}{\partial\dot{x}} \right)d\dot{x} + \left( q - \frac{\partial L}{\partial\dot{y}} \right)d\dot{y} + \dot{x}dp + \dot{y}dq - \frac{\partial L}{\partial x}dx - \frac{\partial L}{\partial y}dy - \frac{\partial L}{\partial z}dz \\
+   & = \dot{x}dp + \dot{y}dq - \dot{p}dx - \dot{q}dy - \frac{\partial L}{\partial z}dz
+\end{aligned}
+>$$
+>根据全微分形式不变性，可见 $H$ 是 $x,y,z,p,q$ 的函数，且有：
+>$$
+\left\{
+\begin{array}{l}
+\begin{aligned}
+\frac{\partial H}{\partial p} &= \dot{x} \\
+\frac{\partial H}{\partial q} &= \dot{y} \\
+\frac{\partial H}{\partial x} &= -\dot{p} \\
+\frac{\partial H}{\partial y} &= -\dot{q} \\
+\frac{\partial H}{\partial z} &= -\frac{\partial L}{\partial z}
+\end{aligned}
+\end{array}
+\right.
+>$$
+>根据光学哈密顿量的定义，
+>$$H=p\dot{x}+q\dot{y}-L(x,y,\dot{x},\dot{y},z)$$
+>将利用全微分形式不变性得到的结果代入,并结合光学广义动量、光学拉格朗日量计算式：
+>$$p=\frac{\partial L}{\partial \dot{x}}=\frac{n(x,y,z)\cdot 2\dot{x}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n(x,y,z)\cdot \dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+>$$q=\frac{\partial L}{\partial \dot{y}}=\frac{n(x,y,z)\cdot 2\dot{y}}{2\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}=\frac{n(x,y,z)\cdot \dot{y}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+>$$L(x,y,\dot{x},\dot{y},z)=n(x,y,z)\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}$$
+>即可得到：
+>$$H=\frac{n\cdot \dot{x}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\cdot \dot{x}+\frac{n\cdot \dot{y}}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}\cdot \dot{y}-n\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}=-\frac{n}{\sqrt{1+\dot{x}^{2}+\dot{y}^{2}}}$$
+>又因为，
+>$$ \sqrt{n^{2} - p^{2} - q^{2}} = \left[ n^{2} - \frac{n^{2} \dot{x}^{2}}{1 + \dot{x}^{2} + \dot{y}^{2}} - \frac{n^{2} \dot{y}^{2}}{1 + \dot{x}^{2} + \dot{y}^{2}} \right]^{\frac{1}{2}} = \frac{n}{\sqrt{1 + \dot{x}^{2} + \dot{y}^{2}}} $$
+>故而，
+>$$H=-\sqrt{n^{2} - p^{2} - q^{2}}$$
+>$$\sqrt{n^{2} - p^{2} - q^{2}}=\sqrt{n^{2}-n^{2}\bigg((\frac{\mathrm{d}x}{\mathrm{d}s})^{2}+(\frac{\mathrm{d}y}{\mathrm{d}s})^{2}\bigg)}=n\cos \gamma$$
+>
