--- a/posts/2025/光学系统设计第一章-高斯光学.md
+++ b/posts/2025/光学系统设计第一章-高斯光学.md
@@ -1,5 +1,5 @@
 ---
-title: 光学系统设计第一章-费马原理三种表述与高斯光学
+title: 光学系统设计第一章Ⅰ-费马原理三种表述与高斯光学
 tags: [Zemax]
 categories: [光学设计基础]
 date: 2025-7-31
@@ -12,7 +12,7 @@ references:
 ---
 
 
-# 光学系统设计第一章 费马原理三种表述与高斯光学
+# 光学系统设计第一章Ⅰ 费马原理三种表述与高斯光学
 
 > **参考书目：**  
 > 《工程光学》（第4版）                 &ensp;      郁道银 谈恒英  
