--- a/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
+++ b/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
@@ -1,1 +1,152 @@
+---
+title: 光学系统设计第一章②-程函方程式、波动光学与几何光学的联系
+tags: [Zemax]
+categories: [光学设计基础]
+date: 2025-7-31
+description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
+articleGPT: 这是光学系统设计第一章第二部分笔记，主要介绍程函方程式、波动光学与几何光学的联系。
+references:
+  - title: 浙江大学光学系统设计 李晓彤老师 2025春夏学期
+  - url: https://classroom.zju.edu.cn/livingroom?course_id=72005&sub_id=1539825&tenant_code=112
+   
+---
+# 光学系统设计第一章② 程函方程式、波动光学与几何光学的联系
 
+> **参考书目：**  
+> 《工程光学》（第4版）                 &ensp;      郁道银 谈恒英  
+> 《几何光学·像差·光学设计》（第5版）         &ensp;&ensp;&ensp;&ensp; 李晓彤 岑兆丰
+>
+> **参考视频：**\
+> 学在浙大-智云学堂-李晓彤老师《光学系统设计》 2024-2025-2 工程师学院
+>
+> **课程概述：**\
+> 主要围绕原理、设计要求与设计方法。主要包括绪论、高斯光学、初级像差理论、光学系统结构设计、光学系统质量评价、光学系统中的特殊面形或元件、特殊光学系统设计。
+
+## 基础知识-从麦克斯韦方程组推导波动方程
+
+-积分形式
+
+1. **高斯定律**：
+   $$ \oint_S \mathbf{E} \cdot d\mathbf{A} = \frac{Q_{\text{enc}}}{\epsilon_0} $$
+
+2. **磁场无源，磁通连续性原理**：
+   $$ \oint_S \mathbf{B} \cdot d\mathbf{A} = 0 $$
+
+3. **法拉第电磁感应定律**：
+   $$ \oint_C \mathbf{E} \cdot d\mathbf{l} = - \frac{d}{dt} \int_S \mathbf{B} \cdot d\mathbf{A} $$
+
+4. **安培环路定律**：
+   $$ \oint_C \mathbf{B} \cdot d\mathbf{l} = \mu_0 \int_S \mathbf{J} \cdot d\mathbf{A} + \mu_0 \epsilon_0 \frac{d}{dt} \int_S \mathbf{E} \cdot d\mathbf{A} $$
+
+### 麦克斯韦方程组-微分形式（自由空间无源条件）
+
+当空间无电荷 ($\rho = 0$) 和无电流 ($\mathbf{J} = 0$) 时：
+$$
+\left\{
+\begin{array}{l}
+\nabla \cdot \mathbf{E} = 0 \\
+\\
+\nabla \cdot \mathbf{B} = 0 \\
+\\
+\nabla \times \mathbf{E} = -\dfrac{\partial \mathbf{B}}{\partial t}\\
+\\
+\nabla \times \mathbf{B} = \mu_0 \epsilon_0 \dfrac{\partial \mathbf{E}}{\partial t}
+\end{array}
+\right.
+$$
+参数说明：
+
+- $\mathbf{E}$：电场强度 (V/m)
+- $\mathbf{B}$：磁感应强度 (T)
+- $\mu_0$：真空磁导率 ($4\pi \times 10^{-7}$ H/m)
+- $\epsilon_0$：真空介电常数 ($8.854 \times 10^{-12}$ F/m)
+- $Q_{\text{enc}}$：封闭曲面内的净电荷
+- $\mathbf{J}$：电流密度
+
+### 麦克斯韦方程组推导波动方程
+  
+**步骤 1：对法拉第定律取旋度**
+$$ \nabla \times (\nabla \times \mathbf{E}) = \nabla \times \left( -\frac{\partial \mathbf{B}}{\partial t} \right) $$
+
+**步骤 2：应用矢量恒等式**
+$$ \nabla \times (\nabla \times \mathbf{E}) = \nabla(\nabla \cdot \mathbf{E}) - \nabla^2 \mathbf{E} $$
+由高斯定律 $\nabla \cdot \mathbf{E} = 0$，简化为：
+$$ \nabla \times (\nabla \times \mathbf{E}) = - \nabla^2 \mathbf{E} $$
+
+**步骤 3：交换时间/空间微分顺序**
+$$ \nabla \times \left( -\frac{\partial \mathbf{B}}{\partial t} \right) = - \frac{\partial}{\partial t} (\nabla \times \mathbf{B}) $$
+
+**步骤 4：代入安培环路定律**
+$$ - \frac{\partial}{\partial t} (\nabla \times \mathbf{B}) = - \frac{\partial}{\partial t} \left( \mu_0 \epsilon_0 \frac{\partial \mathbf{E}}{\partial t} \right) = -\mu_0 \epsilon_0 \frac{\partial^2 \mathbf{E}}{\partial t^2} $$
+
+**步骤 5：合并结果**
+$$ -\nabla^2 \mathbf{E} = -\mu_0 \epsilon_0 \frac{\partial^2 \mathbf{E}}{\partial t^2} $$
+整理得：
+$$ \boxed{\nabla^2 \mathbf{E} = \mu_0 \epsilon_0 \frac{\partial^2 \mathbf{E}}{\partial t^2}} $$
+
+## 程函方程式
+
+### 程函方程式的推导
+
+标量波方程（波动方程）：
+$$\nabla^{2}\psi+k^{2}\psi =0$$
+其中，
+$$k=\frac{w}{v}=\frac{wn}{c}=k_{0}n$$
+对于各向同性介质，显然波动方程有$exp(ikz)$形式的解。现在考虑一般情况，认为介质是非均匀的，可设方程的解为：
+$$\psi=\psi_{0}exp\big(ik_{0}S\small(x,y,z\small)\big)$$
+其中，$\psi_{0}$与$S$是关于坐标的实函数，并与$k_{0}$无关，它们在空间上的变化是缓慢的，将上式代入标量波方程即可得到：
+$$\nabla\cdot\nabla (\psi_{0}e^{ik_{0}S})+k_{0}^{2}n^{2}\psi_{0}e^{ik_{0}S}=0$$
+$$\nabla (ik_{0}\psi_{0}e^{ik_{0}S}\nabla S+e^{ik_{0}S}\nabla\psi_{0})+k_{0}^{2}n^{2}\psi_{0}e^{ik_{0}S}=0$$
+$$ik_{0}e^{ik_{0}S}\nabla S \nabla \psi_{0}+ik_{0}\psi_{0}\nabla S\cdot ik_{0}e^{ik_{0}S}\nabla S+ik_{0}\psi_{0}e^{ik_{0}S}\nabla^{2}S+ik_{0}e^{ik_{0}S}\nabla S\cdot \nabla \psi_{0}+e^{ik_{0}S}\nabla^{2}\psi_{0}+k_{0}^{2}n^{2}\psi_{0}e^{ik_{0}S}=0$$
+整理可得：
+$$ik_{0}\nabla S \nabla \psi_{0}+ik_{0}\psi_{0}\nabla S\cdot ik_{0}\nabla S+ik_{0}\psi_{0}\nabla^{2}S+ik_{0}\nabla S\cdot \nabla \psi_{0}+\nabla^{2}\psi_{0}+k_{0}^{2}n^{2}\psi_{0}=0$$
+$$ik_{0}\nabla S \nabla \psi_{0}-k_{0}^{2}\psi_{0}(\nabla S)^{2}+ik_{0}\psi_{0}\nabla^{2}S+ik_{0}\nabla S\cdot \nabla \psi_{0}+\nabla^{2}\psi_{0}+k_{0}^{2}n^{2}\psi_{0}=0$$
+$$k_{0}^{2}[n_{2}-(\nabla S)^{2}]\psi_{0}+ik_{0}(2\nabla S \cdot \nabla \psi_{0}+\psi_{0}\nabla^{2}S)+\nabla^{2}\psi_{0}=0$$
+$$\because \psi_{0},S \in \R$$
+$$\therefore (\nabla S)^{2}=n^{2}+\frac{\nabla^{2}\psi_{0}}{k_{0}^{2}\psi_{0}}$$
+因为假设$\psi_{0}$、$S$与$k_{0}$无关，所以取$\lambda_{0}\rightarrow0$，即$k_{0}\rightarrow \infty$，可得：
+$$(\nabla S)^{2}=n^{2}$$
+因为$\psi=\psi_{0}exp(ik_{0}S(x,y,z))$，所以$S(x,y,z)$是常数的面表示波面，即该面上相位相同，在各向同性均匀介质中，光线的方向就是波面法线的方向。而由于$(\nabla S)^{2}=n^{2}$，即$S$的梯度与位置无关，所以在某时刻$t$时的波面应平行于起始波面。即可得到**均匀介质中光线是直线**。
+
+### 从程函方程式导出光线方程（费马原理的拉格朗日表述）
+
+$$(\nabla S)^{2}=n^{2}$$
+$\nabla S$是$S$的梯度，是一个矢量，矢量平方等于矢量模的平方，则可得到$|\nabla S|=n$，即：
+$$\nabla S=n\boldsymbol{s}$$
+其中，$\boldsymbol{s}$是与波面垂直的单位矢量。
+对程函方程式取梯度：
+$$\nabla(\nabla S)^{2}=\nabla(n^{2})$$
+展开左边：  
+$$\nabla\left[(\nabla S)^2\right] = \nabla(\nabla S \cdot \nabla S) = 2(\nabla S \cdot \nabla)\nabla S = 2n(\boldsymbol{s} \cdot \nabla)\nabla S$$
+而，
+$$\boldsymbol{s} \cdot \nabla = \frac{d\mathbf{r}}{ds} \cdot \nabla = \frac{ \frac{\partial}{\partial x}dx + \frac{\partial}{\partial y}dy + \frac{\partial}{\partial z}dz }{ds} = \frac{d}{ds}$$
+代入得：  
+$$\nabla\left[(\nabla S)^2\right] = 2n(\mathbf{s} \cdot \nabla)\nabla S = 2n\frac{d}{ds}\left(n\frac{d\mathbf{r}}{ds}\right)$$
+于是，
+ $$ \boxed{ \frac{d}{ds}\left(n\frac{d\mathbf{r}}{ds}\right) = \nabla n } $$
+即，从程函方程式推导出了光线方程（费马原理的拉格朗日表述）。
+
+## 波动光学是量子化的几何光学
+
+能量算符为$i\hbar\frac{\partial}{\partial t}$在光学中用$i\kappa\frac{\partial}{\partial z}$。
+
+设波函数为$\Psi$，则利用光学哈密顿量$H$，写出薛定谔方程式：
+$$H\Psi = i\kappa\frac{\partial\Psi}{\partial z}$$
+$H\Psi$也满足方程：
+$$H(H\Psi) = i\kappa\frac{\partial}{\partial z}(H\Psi) = -\kappa^{2}\frac{\partial^{2}\Psi}{\partial z^{2}}$$
+即：
+$$(n^{2}-p^{2}-q^{2})\Psi = -\kappa^{2}\frac{\partial^{2}\Psi}{\partial z^{2}}$$
+将$p=\frac{\kappa}{i}\frac{\partial}{\partial x}$，$q=\frac{\kappa}{i}\frac{\partial}{\partial y}$代入上式：
+$$\left(\frac{\partial^{2}}{\partial x^{2}} + \frac{\partial^{2}}{\partial y^{2}} + \frac{\partial^{2}}{\partial z^{2}}\right)\Psi + \frac{n^{2}}{\kappa^{2}}\Psi = 0$$
+化简为：
+$$\nabla^{2}\Psi + \frac{n^{2}}{\kappa^{2}}\Psi = 0$$
+与标量波方程$\nabla^{2}\Psi + k^{2}\Psi = 0$比较得：
+$$\frac{n^{2}}{\kappa^{2}} = k_{0}^{2}n^{2}$$
+
+所以：
+$$\kappa = \frac{1}{k_{0}} = \frac{\lambda_{0}}{2\pi}$$
+::: danger
+ **当$\kappa\to0$时**，即波长$\to0$时，波动光学$\to$几何光学  
+ 
+ **反之**，波动光学是量子化的几何光学
+ :::
