--- a/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
+++ b/posts/2025/光学系统设计第一章②-程函方程式、波动光学与几何光学的联系.md
@@ -24,7 +24,7 @@ references:
 
 ## 基础知识-从麦克斯韦方程组推导波动方程
 
--积分形式
+### 麦克斯韦方程组-积分形式
 
 1. **高斯定律**：
    $$ \oint_S \mathbf{E} \cdot d\mathbf{A} = \frac{Q_{\text{enc}}}{\epsilon_0} $$
@@ -102,7 +102,7 @@ $$ik_{0}e^{ik_{0}S}\nabla S \nabla \psi_{0}+ik_{0}\psi_{0}\nabla S\cdot ik_{0}e^
 $$ik_{0}\nabla S \nabla \psi_{0}+ik_{0}\psi_{0}\nabla S\cdot ik_{0}\nabla S+ik_{0}\psi_{0}\nabla^{2}S+ik_{0}\nabla S\cdot \nabla \psi_{0}+\nabla^{2}\psi_{0}+k_{0}^{2}n^{2}\psi_{0}=0$$
 $$ik_{0}\nabla S \nabla \psi_{0}-k_{0}^{2}\psi_{0}(\nabla S)^{2}+ik_{0}\psi_{0}\nabla^{2}S+ik_{0}\nabla S\cdot \nabla \psi_{0}+\nabla^{2}\psi_{0}+k_{0}^{2}n^{2}\psi_{0}=0$$
 $$k_{0}^{2}[n_{2}-(\nabla S)^{2}]\psi_{0}+ik_{0}(2\nabla S \cdot \nabla \psi_{0}+\psi_{0}\nabla^{2}S)+\nabla^{2}\psi_{0}=0$$
-$$\because \psi_{0},S \in \R$$
+$$\because \psi_{0},S \in \R $$
 $$\therefore (\nabla S)^{2}=n^{2}+\frac{\nabla^{2}\psi_{0}}{k_{0}^{2}\psi_{0}}$$
 因为假设$\psi_{0}$、$S$与$k_{0}$无关，所以取$\lambda_{0}\rightarrow0$，即$k_{0}\rightarrow \infty$，可得：
 $$(\nabla S)^{2}=n^{2}$$
