--- a/posts/2025/光学系统设计第二章-初级像差理论.md
+++ b/posts/2025/光学系统设计第二章-初级像差理论.md
@@ -4,7 +4,7 @@ tags: [Zemax]
 categories: [光学设计基础]
 date: 2025-8-7
 description: 本笔记参考浙江大学-李晓彤老师-光学系统设计课程
-articleGPT: 这是光学系统设计第二章笔记，章目的是利用哈密顿表述，导出旋转对称光学系统的像差表达式。理解初级像差的概念、现象、与孔径视场的关系。
+articleGPT: 这是光学系统设计第二章笔记，本章目的是利用哈密顿表述，导出旋转对称光学系统的像差表达式。理解初级像差的概念、现象、与孔径视场的关系。
 references:
   - title: 浙江大学光学系统设计 李晓彤老师 2025春夏学期
   - url: https://classroom.zju.edu.cn/livingroom?course_id=72005&sub_id=1539825&tenant_code=112
@@ -101,3 +101,30 @@ $$\frac{\mathrm{d}P}{\mathrm{d}z}=-2X\frac{\mathrm{d}H}{\mathrm{d}U}$$
 则光线传播到任意位置时的$X$，$Y$，$P$，$Q$均是关于$x_{0}$，$y_{0}$，$\xi$，$\eta$的函数。对于任意光线，将$X$，$Y$，$P$，$Q$级数展开，仍以$X$，$P$为例：
 $$X=X_{1}+X_{2}+X_{3}+\dots$$
 $$P=P_{1}+P_{2}+P_{3}+\dots$$
+其中$X_{1}$、$P_{1}$为一次项，同理依次递增。但要注意 **<font color = red>没有零次项即常数项</font>** 。假设光线初始坐标为$(0,0)$，即光线出发点位于物面与光轴交点处，并沿光轴传播，若有零次项，则说明光线在传播后将会偏离光轴，与实际不符。
+
+由于系统旋转对称，由$x_{0}$，$y_{0}$，$\xi$，$\eta$决定的光线在某个面上有$X(z_{1})$、$Y(z_{1})$、$P(z_{1})$、$Q(z_{1})$；而由$-x_{0}$，$-y_{0}$，$-\xi$，$-\eta$决定的光线在该面上有$-X(z_{1})$、$-Y(z_{1})$、$-P(z_{1})$、$-Q(z_{1})$。但要注意 **<font color = red>没有偶次项</font>**。若含有偶次项，那么在光线传播的某个面处有：
+$$X(z_{1})=X_{1}(z_{1})+X_{2}(z_{1})$$
+$$-X(z_{1})=-X_{1}(z_{1})-X_{2}(z_{1})$$
+但$X_{2}(z_{1})\neq 0$，那么这与系统的旋转对称性相矛盾，即对称光线在同一面上的交点不再对称。故没有偶次项。
+
+### 像差级次
+- 当$x_{0}$，$y_{0}$，$\xi$，$\eta$为无限小时，高次项可以忽略，仅有线性项，即得到高斯光学，没有像差。
+- $X=X_{1}+X_{2}+X_{3}+\dots$ 没有偶次项，即偶次项为0，不对像差有贡献。
+- 故而$X_{3}$、$P_{3}$为初级像差，$X_{5}$、$P_{5}$为二级像差。
+
+综上所述，将$X$，$Y$，$P$，$Q$级数展开最终整理得到的形式为：
+$$X=X_{1}+X_{3}+X_{5}+\dots$$
+$$P=P_{1}+P_{3}+P_{5}+\dots$$
+
+> 注意，有的文献按照$X_{3}$的级数级次为3，也成为三级像差，实质上只是换了个名字。**Primary aberration**（初级像差）、**The third-order aberration**（三阶像差）、**Seidel aberration**（赛德尔像差）均指的同一个东西，即$X_{3}$、$P_{3}$...
+
+## 初级像差的计算
+
+### 方程推导
+ 将哈密顿量$H$在$U=0,V=0$处进行泰勒级数展开，即得到：
+ $$H=H_{0}+H_{1}U+H_{2}V+\frac{1}{2}(H_{11}U^{2}+H_{22}V^{2}+2H_{12}UV)+\dots $$
+ 各项泰勒系数均为$z$的函数。
+ 由哈密顿方程得出的结论：
+ $$\dot{X}=\frac{\partial H}{\partial P}$$
+ $$\frac{\partial X}{\partial z}=2P\frac{\partial H}{\partial V}$$
